--- a/index.html
+++ b/index.html
@@ -56,14 +56,23 @@
                 <div class="col-12 col-lg-8 px-4">
                     <section class="section-style purple-border">
                         <h2 class="mb-3 section-title">About me</h2>
-                        <p>I'm Julian, <span class="bold">19 year old</span> student. I'm studying at the <span
-                                class="bold">computer science IUT of Bordeaux</span>.</p>
+                        <p>I'm Julian, <span class="bold">20 year old</span> student. I'm studying at the <span
+                                class="bold">Enseirb MATMECA Engineering School of Bordeaux</span>.</p>
                     </section>
                     <section class="section-style orange-border">
                         <h2 class="mb-3 section-title">Work Experience</h2>
                         <div class="mb-4">
+                            <h5 class="section-subtitle">Software Engineer - <span class="secondary-info">Orange DTSI, (2022 - Now)</span></h5>
+                            <p> I work at Orange, in the DTSI departement. I am in charge of the development of an application using Angular and Java Spring Boot. I learnt to communicate and to work with people in a big company. </p>
+                        </div>
+                        <div class="mb-4">
+                            <h5 class="section-subtitle">Student - <span class="secondary-info">Enseirb MATMECA of
+                                    Bordeaux, (2022 - Now)</span></h5>
+                            <p> I am learning mathematics, physics, computer science and network. I am also improving my english level. </p>
+                        </div>
+                        <div class="mb-4">
                             <h5 class="section-subtitle">Student - <span class="secondary-info">Computer Science IUT of
-                                    Bordeaux, (2020 - Now)</span></h5>
+                                    Bordeaux, (2020 - 2022)</span></h5>
                             <p> Thanks to this training I learned the basics of computer programming. I learned several
                                 programming languages ​​such as Java, C#, C, HTML, CSS, PHP... But also math,
                                 communication and how to collaborate with someone properly. </p>
